PROJECT(IceTUsersGuide NONE)

INCLUDE(UseLATEX.cmake)

SET(TITLE "IceT Users' Guide and Reference")

SET(CHAPTERS
  Introduction.tex
  Tutorial.tex
  BasicUsage.tex
  )

LATEX_COPY_GLOBBED_FILES(${CMAKE_CURRENT_SOURCE_DIR}/SANDreport/*.cls .)
LATEX_COPY_GLOBBED_FILES(${CMAKE_CURRENT_SOURCE_DIR}/SANDreport/*.sty .)
LATEX_COPY_GLOBBED_FILES(${CMAKE_CURRENT_SOURCE_DIR}/SANDreport/*.eps .)
LATEX_COPY_GLOBBED_FILES(${CMAKE_CURRENT_SOURCE_DIR}/SANDreport/*.pdf .)
LATEX_COPY_GLOBBED_FILES(${CMAKE_CURRENT_SOURCE_DIR}/latex2man/*.sty .)
LATEX_COPY_GLOBBED_FILES(${CMAKE_CURRENT_SOURCE_DIR}/latex2man/*.cfg .)

LATEX_COPY_GLOBBED_FILES(${CMAKE_CURRENT_SOURCE_DIR}/examples/*.c examples)

ADD_LATEX_DOCUMENT(IceTUsersGuide.tex USE_INDEX
  INPUTS ${CHAPTERS}
  CONFIGURE IceTUsersGuide.tex
  IMAGE_DIRS images
  )

ADD_SUBDIRECTORY(manpages)

OPTION(ICET_BUILD_EXAMPLES "Build the IceT examples." OFF)
IF (ICET_BUILD_EXAMPLES)
  ADD_SUBDIRECTORY(examples)
ENDIF (ICET_BUILD_EXAMPLES)
