PROJECT(IceTUsersGuide NONE)

CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

INCLUDE(UseLATEX.cmake)

SET(TITLE "IceT Users' Guide and Reference")
SET(VERSION "2.0")

SET(CHAPTERS
  Introduction.tex
  Tutorial.tex
  BasicUsage.tex
  CustomizingCompositing.tex
  Strategies.tex
  NewStrategies.tex
  Communicators.tex
  Transitioning.tex
  )

LATEX_COPY_GLOBBED_FILES(
  ${CMAKE_CURRENT_SOURCE_DIR}/SANDreport/*.cls
  ${CMAKE_CURRENT_BINARY_DIR}
  )
LATEX_COPY_GLOBBED_FILES(
  ${CMAKE_CURRENT_SOURCE_DIR}/SANDreport/*.sty
  ${CMAKE_CURRENT_BINARY_DIR}
  )
FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/SANDimages)
LATEX_COPY_GLOBBED_FILES(
  ${CMAKE_CURRENT_SOURCE_DIR}/SANDreport/SANDimages/*.eps
  ${CMAKE_CURRENT_BINARY_DIR}/SANDimages
  )
LATEX_COPY_GLOBBED_FILES(
  ${CMAKE_CURRENT_SOURCE_DIR}/SANDreport/SANDimages/*.pdf
  ${CMAKE_CURRENT_BINARY_DIR}/SANDimages
  )

LATEX_COPY_GLOBBED_FILES(
  ${CMAKE_CURRENT_SOURCE_DIR}/latex2man/*.sty
  ${CMAKE_CURRENT_BINARY_DIR}
  )
LATEX_COPY_GLOBBED_FILES(
  ${CMAKE_CURRENT_SOURCE_DIR}/latex2man/*.cfg
  ${CMAKE_CURRENT_BINARY_DIR}
  )

LATEX_COPY_GLOBBED_FILES(
  ${CMAKE_CURRENT_SOURCE_DIR}/examples/*.c
  ${CMAKE_CURRENT_BINARY_DIR}/examples
  )

ADD_LATEX_DOCUMENT(IceTUsersGuide.tex USE_INDEX
  INPUTS ${CHAPTERS}
  CONFIGURE IceTUsersGuide.tex
  IMAGE_DIRS images
  )

ADD_SUBDIRECTORY(manpages)
ADD_SUBDIRECTORY(enumerations)

OPTION(ICET_BUILD_EXAMPLES "Build the IceT examples." OFF)
IF (ICET_BUILD_EXAMPLES)
  ADD_SUBDIRECTORY(examples)
ENDIF (ICET_BUILD_EXAMPLES)
