PROJECT(IceTExamples C)

SET(Examples
  Tutorial
  )

FIND_PACKAGE(IceT REQUIRED)
INCLUDE(${ICET_USE_FILE})

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLUT REQUIRED)
FIND_PACKAGE(MPI REQUIRED)

MARK_AS_ADVANCED(CLEAR
  MPI_INCLUDE_PATH
  MPI_LIBRARY
  MPI_EXTRA_LIBRARY
  )

INCLUDE_DIRECTORIES(
  ${OPENGL_INCLUDE_DIR}
  ${MPI_INCLUDE_PATH}
  ${GLUT_INCLUDE_DIR}
  )

FOREACH (example ${Examples})
  ADD_EXECUTABLE(${example} ${example}.c)
  TARGET_LINK_LIBRARIES(${example}
    ${OPENGL_LIBRARIES}
    ${GLUT_LIBRARIES}
    ${MPI_LIBRARY}
    ${MPI_EXTRA_LIBRARY}
    ${ICET_CORE_LIBS}
    ${ICET_MPI_LIBS}
    )
ENDFOREACH (example ${Examples})
